--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:palette-v7:23.0.1'
     compile 'com.android.support:support-annotations:23.0.1'
+    compile files('libs/eventbus.jar')
 }
